unpackaged/objects/CampaignMember.object
<CustomObject>
  <fields>
    <fullName>Payment_By__c</fullName>
    <label>Payment By</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Participant</fullName>
        </value>
        <value>
          <fullName>Dentsply Company</fullName>
        </value>
        <value>
          <fullName>Distributor</fullName>
        </value>
        <value>
          <fullName>Other Payer</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Payment_Comment__c</fullName>
    <label>Payment Comment (IT)</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status (IT)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Billable</fullName>
        </value>
        <value>
          <fullName>To be invoiced</fullName>
        </value>
        <value>
          <fullName>Invoiced</fullName>
        </value>
        <value>
          <fullName>Not to be invoiced</fullName>
        </value>
        <value>
          <fullName>Credit Note</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Credit Card</fullName>
        </value>
        <value>
          <fullName>Automatic Debit Transfer System</fullName>
        </value>
        <value>
          <fullName>Invoice</fullName>
        </value>
        <value>
          <fullName>STEPPS Points</fullName>
        </value>
        <value>
          <fullName>Cash</fullName>
        </value>
        <value>
          <fullName>Check</fullName>
        </value>
        <value>
          <fullName>Voucher</fullName>
        </value>
        <value>
          <fullName>Subscription</fullName>
        </value>
        <value>
          <fullName>Loyalty program points</fullName>
        </value>
        <value>
          <fullName>Mixed payment</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Phone__c</fullName>
    <description>Dynamic field that will show the Phone Number of the Member if the Contact belongs to your territories.</description>
    <formula>IF( CONTAINS( Contact.TerritoryUsers__c ,  $User.Movex_Uer_ID__c ) ,  Contact.Phone , "####")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone #</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Practitioner_ID_NPI_in_US__c</fullName>
    <formula>Contact.Practitioner_ID_NPI_in_US__c</formula>
    <label>Practitioner ID (NPI in US)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Priority_Ranking__c</fullName>
    <description>Used for the operations team to provide priority/ranking for campaign members to call</description>
    <label>Priority/Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Priority__c</fullName>
    <description>TFUS-000003959
Used by Inside Sales Reps to order their reports by the right campaign members prioritization (initially defined upon mass importing campaign members)</description>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Profession__c</fullName>
    <description>Shows the Contact Profession. Used in Page Layout etc</description>
    <formula>IF( ISPICKVAL(Contact.Account.Owner.Market__c,"Switzerland") , TEXT(Contact.Profession_D_CH__c) , TEXT(Contact.Profession__c))</formula>
    <inlineHelpText>Shows the Contact Profession.</inlineHelpText>
    <label>Profession</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Rate_per_night__c</fullName>
    <label>Rate/Night</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Referred_UK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track what follow-up activities that has been made towards participants.
This box is ticked if the participant has refferred a patient.</description>
    <inlineHelpText>This box is ticked if the participant has refferred a patient.</inlineHelpText>
    <label>Referred (UK)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Refresher_Restorative_Training__c</fullName>
    <description>Used to track what follow-up activities that has been made towards participants.</description>
    <label>Refresher Restorative Training</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>RoleProfession__c</fullName>
    <formula>IF(ISBLANK(ContactId),TEXT(Lead.RoleProfession__c),TEXT(Contact.Profession__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role/Profession</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SalesLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>Field_Sales_Project_Members__c</referenceTo>
    <relationshipLabel>Campaign Members (Sales Lead)</relationshipLabel>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Sales_Lead_Opportunity__c</fullName>
    <formula>IF(ISBLANK(SalesLead__c),  IF(ISBLANK(Opportunity__c), NULL,  HYPERLINK("/" &amp; Opportunity__c, Opportunity__r.Name,'_self') ) , HYPERLINK("/" &amp; SalesLead__c , SalesLead__r.Name,'_self'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Lead / Opportunity</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Simplant_Won_Lost_Status__c</fullName>
    <label>Simplant Won/Lost Status</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Special_Diet_Allergies__c</fullName>
    <label>Special Diet/Allergies</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Specialty__c</fullName>
    <formula>IF(ISBLANK(ContactId),TEXT(Lead.Specialty__c),TEXT(Contact.Specialty__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialty</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>MQL</fullName>
        </value>
        <value>
          <fullName>SQL</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <description>This fields displays a text version of the Status field on Campaign Members. Used to override the fact that you can not have a read only version of the original Status field on the Page Layout</description>
    <formula>TEXT(Status)</formula>
    <inlineHelpText>This fields displays a text version of the Status field on Campaign Members. Used to override the fact that you can not have a read only version of the original Status field on the Page Layout</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Street__c</fullName>
    <formula>Contact.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Student__c</fullName>
    <description>Checks if this Campaign Member is a Student. Used for ADA-CERP</description>
    <formula>OR( ISPICKVAL( Contact.Profession__c , "Dental Student"), ISPICKVAL( Contact.Profession__c , "Post Graduate trainee"), ISPICKVAL( Contact.Profession_D_CH__c , "Post Graduate trainee"),ISPICKVAL( Contact.Sub_Contact_Type__c , "Dental Student"), ISPICKVAL( Contact.Sub_Contact_Type__c , "Post Graduate trainee"))</formula>
    <inlineHelpText>Checks if this Campaign Member is a Student. Used for ADA-CERP</inlineHelpText>
    <label>Student</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>TSM_attended_restoration__c</fullName>
    <description>Used to track what follow-up activities that has been made towards participants.</description>
    <inlineHelpText>Add the date when the TSM attended restoration.</inlineHelpText>
    <label>TSM attended restoration</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Target_Type__c</fullName>
    <description>Shows the Target Type from the Contact</description>
    <formula>TEXT(Contact.Target_Type__c)</formula>
    <inlineHelpText>Shows the Target Type from the Contact</inlineHelpText>
    <label>Target Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Technicians__c</fullName>
    <description>Checks if this Campaign Member is a Technician. Used for ADA-CERP</description>
    <formula>OR( ISPICKVAL( Contact.Profession__c , "Dental Technician"),ISPICKVAL( Contact.Profession_D_CH__c , "Dental Technician"),ISPICKVAL( Contact.Sub_Contact_Type__c , "Dental Technician"), ISPICKVAL(Contact.Sub_Contact_Type__c , "Dental Technician Master"))</formula>
    <inlineHelpText>Checks if this Campaign Member is a Technician. Used for ADA-CERP</inlineHelpText>
    <label>Technicians</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Total_Fee__c</fullName>
    <formula>Course_Fee__c  - Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Transfer_Arranged_by_DI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Arranged by DI</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Transfer_Details__c</fullName>
    <label>Transfer Details</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Distributor</fullName>
        </value>
        <value>
          <fullName>Interpreter</fullName>
        </value>
        <value>
          <fullName>Moderator</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Participant</fullName>
          <default>true</default>
          <label>Participant</label>
        </value>
        <value>
          <fullName>Sales Staff</fullName>
        </value>
        <value>
          <fullName>Speaker</fullName>
        </value>
        <value>
          <fullName>Speaker &amp; Moderator</fullName>
        </value>
        <value>
          <fullName>Spouse</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Unique_Email_In_Campaign__c</fullName>
    <description>This is a unique firld populate by PB that is only allowing to have on email address percamapaing.
CampaignID+Member email</description>
    <label>Unique Email In Campaign</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>of_Guests_including_participant__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Single Room</fullName>
        </value>
        <value>
          <fullName>Double Room</fullName>
        </value>
        <value>
          <fullName>Suite</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <recordTypes>
    <active>true</active>
    <fullName>Digital_Marketing_Campaign_Member</fullName>
    <label>Digital Marketing Campaign Member</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>InPersonEventCampaignMember</fullName>
    <label>In-Person or Virtual Event Campaign Member</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <fullName>Standard_Campaign_Member</fullName>
    <label>Standard Campaign Member</label>
  </recordTypes>
  <sharingModel>ControlledByCampaign</sharingModel>
  <validationRules>
    <fullName>Dealer_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Campaign.AssignRepFromDealer__c = true, ISBLANK(Dealer__c),  OR(Campaign.RecordType.DeveloperName = 'Digital_Marketing_Campaign', Campaign.RecordType.DeveloperName = 'InPersonEventCampaign'),  $User.User_ID_18_digit__c != '0056M00000A14bnQAB',  OR(ISPICKVAL(Status, 'Visited'), ISPICKVAL(Status, 'Responded')))</errorConditionFormula>
    <errorDisplayField>Dealer__c</errorDisplayField>
    <errorMessage>Please note! For this Campaign, you need to assign a Dealer to each Campaign Member</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Not_null_email_contact_member</fullName>
    <active>true</active>
    <errorConditionFormula>Campaign.RecordType.DeveloperName = 'Digital_Marketing_Campaign' &amp;&amp;  ContactId != null  &amp;&amp;  Contact.Email = ''</errorConditionFormula>
    <errorMessage>One contact does not have email address. Please update the email in the contact before adding it to a digital campaign.</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>UK_Only_coordinators_can_add_members</fullName>
    <active>false</active>
    <description>Only Campaign coordinators are allowed to add campaign members in UK</description>
    <errorConditionFormula>AND(Campaign.Campaign_Coordinator__r.Id &lt;&gt; $User.Id , TEXT($User.User_Country__c) = "UK",  TEXT($User.User_Type__c) = "Sales representative")</errorConditionFormula>
    <errorMessage>Only campaign coordinators are allowed to add campaign members</errorMessage>
  </validationRules>
</CustomObject>